# Scripts

./: README.md
CyberpunkAutoupdate/: CyberpunkUpdate.ps1
HalfLifeSlowDown/: timebinds.cfg
JavaScripts/: HelloWorld
ObsidianUpdateChecker/: main.py
OpenAsarInjector/: main.py
PipAllowGlobalToggle/: PipAllowGlobalToggle.ps1
PlexMusicFixer/: TODO.txt  tsconfig.json  userscript.js
PlexMusicFixer/src/: userscript.ts
Rainbow/: rainbow.js  rainbow.rkt
RemoveVersion/: RemoveVersion.ps1
ScoopCompare/: ScoopCompare.js
ScoopManifestReformatter/: reformat.ps1
ShowTax/: showtax.js
SimpleFTP/: SimpleFTP.ps1
SpoofMacAddress/: SpoofScript.ps1
SteamToggleUpdate/: ToggleCyberpunkUpdates.ps1  ToggleFallout4Updates.ps1  ToggleSkyrimUpdates.ps1  ToggleStardewUpdates.ps1  ToggleUpdates.ps1
VoltorbFlipSpinners/src/: VoltorbFlipSpinners.js
VolumeFix/: VolumeFix.ahk
WallpaperEngineTools/: ffmpeg-encode.ps1  ffmpeg-fix-container.ps1  record-obs.ahk  source-setup.cfg
archive-rom/: download-urls.py  run.ps1  todo.url  urls.txt
convert-rvz-wbfs/: convert.ps1
hq2cd-conv/: albums.txt  hq2cd.py  pyproject.toml
hq2cd-ps1/: TODO.txt  convert-from-file.ps1  get-paths.ps1
hq2cd-ps1/old/: to_redownload.txt  too_hq_old.ps1
hq2cd-py/: filtered_files.txt  gethq.py  test.json
html-folder-dl/: website-dl.ps1
mcrcon/: rcon.ps1
obs-replay-notification/: Beep_on_replay_buffer_save.lua
scoop-pkg/: scoop_pkg.ps1
scrcpy-default/: scrcpy-default.ps1
vimm/: .gitignore  README.md  vimm-bulk.py  vimm.py  wbfs-test.ps1  wii-games.txt
vimm/bruno-vimm/: bruno.json  (+2 more)
